fix collapse button position to improve UI

--- a/app/src/scss/styles.scss
+++ b/app/src/scss/styles.scss
@@ -213,7 +213,7 @@
   padding: 80px 0px 100px;
   .expand-button {
     position: relative;
-    left: 50%;
+    left: 50%; top: 2rem;
     width: 40px;
     height: 40px;
     display: flex;
